@@ -22,6 +22,9 @@ if(`uname` == "Darwin") then
 endif
 
 set PROPOSEDINSTALL = $JLAB_SOFTWARE/qt/${QT_VERSION}/${QT_BIN_VERSION}/${QTSYSTEM}
+if( $QT_VERSION == "system") then
+	set PROPOSEDINSTALL = $JLAB_SOFTWARE/qt/${QT_VERSION}/${QTSYSTEM}
+endif
 
 # set the location according to user preferences
 setenv QTDIR `getVersion.py QTDIR $PROPOSEDINSTALL $overwrite`
